--- a/HW-6/index.html
+++ b/HW-6/index.html
@@ -43,7 +43,7 @@
         </div>
     </section>
     
-    <section class="skills">
+    <section class="skills" id="skills">
         <h2>Skills</h2>
             <p class="center">I work in such programs as</p>
                 <div class="col-12">
