--- a/HW-6/index.html
+++ b/HW-6/index.html
@@ -91,27 +91,28 @@
     <section id="contacts">
         <h2 class="center">Contacts</h2>
             <div class="text-lh"><p>Want to know more or just chat?</p> 
-            <p>You are welcome!</p></div>
+            <p>You are welcome!</p>
+            </div>
                 <div class="ecenter">
-            <button class="padding">Send message</button>
-               </div>
-                <div class="col-12 padding">
-                    <div class="col-3">
-                    <a href="https://ua.linkedin.com/" target="_blank"><img src="./img/linkedin.svg" alt="linkedin"></a>
-                     </div>
-                     <div class="col-3">
-                    <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.svg" alt="instagram"></a>
-                    </div>
-                    <div class="col-3">
-                    <a href="https://www.behance.net/" target="_blank"><img src="./img/behance.svg" alt="behance"></a>
-                    </div>
-                    <div class="col-3">
-                    <a href="https://dribbble.com/" target="_blank"><img src="./img/dribbble.svg" alt="dribble"></a>
-                   </div>
+                    <button class="padding">Send message</button>
                 </div>
-                <div class="footer-text">
-            <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
-                </div> 
+                    <div class="col-12 padding">
+                        <div class="col-3">
+                            <a href="https://ua.linkedin.com/" target="_blank"><img src="./img/linkedin.svg" alt="linkedin"></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.svg" alt="instagram"></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://www.behance.net/" target="_blank"><img src="./img/behance.svg" alt="behance"></a>
+                        </div>
+                        <div class="col-3">
+                            <a href="https://dribbble.com/" target="_blank"><img src="./img/dribbble.svg" alt="dribble"></a>
+                        </div>
+                    </div>
+                    <div class="footer-text">
+                        <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
+                    </div> 
     </section>
 </footer>
 </body>
