--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -30,7 +30,7 @@
                 </label>
             </li>
             <li>
-                <label>
+                <label class="effect">
                     <input type="checkbox">
                     <span>
                         10 apples
@@ -82,11 +82,9 @@
                 </label>
             </li>
         </ul>
-    </main> 
-    <footer>  
         <div>
             <button type="submit" class="btn" disabled>Bon appetit :)</button>
         </div>
-    </footer>
+    </main> 
 </body>
 </html>
