--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -19,7 +19,7 @@
     <main>
         <ul class="s_l">
             <li>
-                <label>
+                <label class="effect">
                     <input type="checkbox">
                     <span>
                         A lot of pickles
