--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -48,7 +48,7 @@
                     <div class="col">
                         <h1>The Design Thinking superpowers</h1>
                         <div class="text-holder"><p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p></div>
-                        <button class="btn">Get started</button>
+                        <button class="btn"><a href="#"></a>Get started</button>
                     </div>
                     <div class="col">
                     <div class="image-1"><img src="./img/Image.svg" alt="image"></div>
@@ -81,7 +81,7 @@
                         <div class="text-holder"><p>Personal choices and the overall personality of the person. </p></div>
                     </div>
                 </div>
-                <div class="btn-2"><button class="btn">Sign up Now</button></div>
+                <div class="btn-2"><button class="btn"><a href="#"></a>Sign up Now</button></div>
             </div>         
         </section>
     </main>
