--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -12,33 +12,34 @@
 </head>
 <body>
     <header class="header">
-        <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="logo">
-                <a href="#/"><img src="./img/Logo.svg" alt="logo"></a>
-                </div>
-                <div class="nav">
-                    <nav class="nav-list"> 
-                        <li class="nav-item">
-                            <a href="#product" class="nav-link">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#costumers" class="nav-link">Customers</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#prising" class="nav-link">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#resources" class="nav-link">Resources</a>
-                        </li>
-                    </nav>
-                </div>
-            <div class="button">
-                <button class="sing-in"><a href="#"></a> Sing in</button>
-                <button class="sing-up"><a href="#"></a>Sing up</button>
+        <div class="container">
+            <div class="logo">
+                <a href="/">
+                    <img src="./img/Logo.svg" alt="productly">
+                </a>
             </div>
-        </div>
+                <nav class="nav">
+                    <nav class="nav-list"> 
+                        <ul>
+                            <li class="nav-item">
+                                <a href="#product" class="nav-link">Product</a>
+                             </li>
+                            <li class="nav-item">
+                                <a href="#costumers" class="nav-link">Customers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#prising" class="nav-link">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#resources" class="nav-link">Resources</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </nav>
+            <div class="btn">
+                <a href="#" class="sing-in">Sing in</a>
+                <a href="#" class="sing-up">Sing up</a>
+            </div>
         </div>
     </header>
     <main>
@@ -47,43 +48,73 @@
                 <div class="row">
                     <div class="col">
                         <h1>The Design Thinking superpowers</h1>
-                        <div class="text-holder"><p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p></div>
-                        <button class="btn"><a href="#"></a>Get started</button>
+                        <div class="text-holder">
+                            <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+                        </div>
+                        <div class="btn">
+                            <a href="/" class="get-started">Get started</a>
+                        </div>
                     </div>
                     <div class="col">
-                    <div class="image-1"><img src="./img/Image.svg" alt="image"></div>
+                        <div class="image-1">
+                            <img src="./img/Image.svg" alt="image">
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="product">
-            <div class="container">
+            <div class="container" style="background-image: ;">
                 <h2>We design tools to unveil your superpowers</h2>
                 <div class="row">
                     <div class="col">
-                        <div><img src="./img/icon.png" alt="icon"></div>
+                        <div>
+                            <img src="./img/icon.png" alt="icon">
+                        </div>
                         <h3>First click tests</h3>
-                        <div class="text-holder"><p>While most people enjoy casino gambling</p></div>
+                        <div class="text-holder">
+                            <p>While most people enjoy casino gambling</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div><img src="./img/icon-1.png" alt="icon1"></div>
+                        <div>
+                            <img src="./img/icon-1.png" alt="icon1">
+                        </div>
                         <h3>Design surveys</h3>
-                        <div class="text-holder"><p>Sports betting, lottery and bingo playing for the fun</p></div>
+                        <div class="text-holder">
+                            <p>Sports betting, lottery and bingo playing for the fun</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div><img src="./img/icon-2.png" alt="icon2"></div>
+                        <div>
+                            <img src="./img/icon-2.png" alt="icon2">
+                        </div>
                         <h3>Preference tests</h3>
-                        <div class="text-holder"><p>The Myspace page defines the individual.g</p></div>
+                        <div class="text-holder">
+                            <p>The Myspace page defines the individual.g</p>
+                        </div>
                     </div>
                     <div class="col">
-                        <div><img src="./img/icon-3.png" alt="icon3"></div>
+                        <div>
+                            <img src="./img/icon-3.png" alt="icon3">
+                        </div>
                         <h3>Five second tests</h3>
-                        <div class="text-holder"><p>Personal choices and the overall personality of the person. </p></div>
+                        <div class="text-holder">
+                            <p>Personal choices and the overall personality of the person. </p>
+                        </div>
                     </div>
                 </div>
-                <div class="btn-2"><button class="btn"><a href="#"></a>Sign up Now</button></div>
+                <div class="btn">
+                    <a href="#" class="sing-up-now">Sign up Now</a>
+                </div>
             </div>         
         </section>
+        <section class="benefits">
+
+        </section>
+        <footer class="footer">
+
+        </footer>
     </main>
 </body>
 </html>
