--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -20,7 +20,7 @@
             </div>
                 <nav class="nav">
                     <nav class="nav-list"> 
-                        <ul>
+                        <ul class="menu">
                             <li class="nav-item">
                                 <a href="#product" class="nav-link">Product</a>
                              </li>
@@ -63,13 +63,13 @@
                 </div>
             </div>
         </section>
-        <section class="product">
-            <div class="container" style="background-image: ;">
+        <section class="product" id="product">
+            <div class="container" style="background-image: url('.') ;">
                 <h2>We design tools to unveil your superpowers</h2>
                 <div class="row">
                     <div class="col">
                         <div>
-                            <img src="./img/icon.png" alt="icon">
+                            <img src="./img/icon.svg" alt="icon">
                         </div>
                         <h3>First click tests</h3>
                         <div class="text-holder">
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col">
                         <div>
-                            <img src="./img/icon-1.png" alt="icon1">
+                            <img src="./img/icon-1.svg" alt="icon1">
                         </div>
                         <h3>Design surveys</h3>
                         <div class="text-holder">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col">
                         <div>
-                            <img src="./img/icon-2.png" alt="icon2">
+                            <img src="./img/icon-2.svg" alt="icon2">
                         </div>
                         <h3>Preference tests</h3>
                         <div class="text-holder">
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col">
                         <div>
-                            <img src="./img/icon-3.png" alt="icon3">
+                            <img src="./img/icon-3.svg" alt="icon3">
                         </div>
                         <h3>Five second tests</h3>
                         <div class="text-holder">
@@ -109,12 +109,156 @@
                 </div>
             </div>         
         </section>
-        <section class="benefits">
-
+        <section class="benefits-section" id="benefits">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                    <div class="image-1">
+                         <img src="./img/Image-1.svg" alt="image-1">
+                     </div>
+                    </div>
+                    <div class="col">
+                    <div class="text">
+                        <p>Effortless Validation for</p>
+                    </div>
+                    <h2>Design Professionals</h2>
+                    <div class="text-holder">
+                        <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+                        <h4>Accessory makers</h4>
+                        <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun.</p>
+                        <h4>Alterationists</h4>
+                        <p>If you are looking for a new way to promote your business that won’t cost you more money.</p>
+                        <h4>Custom Design designers</h4>
+                        <p>If you are looking for a new way to promote your business that won’t cost you more money.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <footer class="footer">
-
+        <section class="benefits-section" id="product-managers">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="image-1">
+                            <img src="./img/Image-2.svg" alt="image-2">
+                        </div>
+                    </div> 
+                    <div class="col">  
+                        <div class="text">
+                             <p>Easier decision making for</p>
+                        </div>
+                        <h2>Product Managers</h2>
+                        <div class="text-holder">
+                            <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+                        <ul class="check-list"> 
+                            <li class="check">
+                                <div class="icon-check">
+                                    <img src="./img/icon-check.svg" alt="icon-check">
+                                </div>
+                                <p>Never worry about overpaying for your energy bill again.</p>
+                            </li>
+                            <li class="check">
+                                <div class="icon-check">
+                                    <img src="./img/icon-check.svg" alt="icon-check">
+                                </div>
+                                <p>We will only switch you to energy companies that we trust and will treat you right.</p>
+                            </li>
+                            <li class="check">
+                                <div class="icon-check">
+                                    <img src="./img/icon-check.svg" alt="icon-check">
+                                </div>
+                                <p>We track the markets daily and know where the savings are.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="benefits-section" id="marketers">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="image-1">
+                            <img src="./img/Image-3.svg" alt="Image-3">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="text">
+                            <p>Optimisation for</p>
+                        </div>
+                         <h2>Marketers</h2>
+                        <div class="text-holder">
+                            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.</p>
+                            <h4>Accessory makers</h4>
+                            <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun.</p>
+                            <h4>Alterationists</h4>
+                            <p>If you are looking for a new way to promote your business that won’t cost you more money.</p>
+                            <h4>Custom Design designers</h4>
+                            <p>If you are looking for a new way to promote your business that won’t cost you more money.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="logo">
+                            <a href="/">
+                                <img src="./img/Logo.svg" alt="productly">
+                            </a>
+                        </div>    
+                    </div>
+                    <div class="col">
+                        <h3>Quick Links</h3>
+                        <ul class="list">
+                            <li class="list-item">
+                                <a href="#about_us">About Us</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#blog">Blog</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#contact">Contact</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#faq">FAQ</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3>Legal Stuff</h3>
+                        <ul class="list">
+                            <li class="list-item">
+                                <a href="#disclaimer">Desclaimer</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#financing">Financing</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#privacy_policy">Provacy Policy</a>
+                            </li>
+                            <li class="list-item">
+                                <a href="#terms_of_service">Terms of Service</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3>Knowing you're always on the best energy deal.</h3>    
+                        <div class="form">
+                            <form action="#">
+                                <label for="tel"></label>
+                                <input id="tel" name="tel" type="tel" autocorrect="off" autocomplete="tel" placeholder="Enter your phone Number"> 
+                            </form>
+                        </div>
+                        <div class="btn">
+                            <a href="#" class="sing-up-now" type="submit">Sign up Now</a>
+                        </div>    
+                    </div>
+                </div>
+            </div>
         </footer>
+       
     </main>
 </body>
 </html>
