--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -237,7 +237,7 @@
                                 <a href="#financing">Financing</a>
                             </li>
                             <li class="list-item">
-                                <a href="#privacy_policy">Provacy Policy</a>
+                                <a href="#privacy_policy">Privacy Policy</a>
                             </li>
                             <li class="list-item">
                                 <a href="#terms_of_service">Terms of Service</a>
