--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -36,9 +36,9 @@
                         </ul>
                     </nav>
                 </nav>
-            <div class="btn">
-                <a href="#" class="sing-in">Sing in</a>
-                <a href="#" class="sing-up">Sing up</a>
+            <div class="btn-holder">
+                <a href="#" class="btn sing-in">Sing in</a>
+                <a href="#" class="btn">Sing up</a>
             </div>
         </div>
     </header>
@@ -51,8 +51,8 @@
                         <div class="text-holder">
                             <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
                         </div>
-                        <div class="btn">
-                            <a href="/" class="get-started">Get started</a>
+                        <div class="btn-holder">
+                            <a href="/" class="btn xl">Get started</a>
                         </div>
                     </div>
                     <div class="col">
@@ -63,8 +63,8 @@
                 </div>
             </div>
         </section>
-        <section class="product" id="product">
-            <div class="container" style="background-image: url('.') ;">
+        <section class="product" id="product" style="background-image: url('./img/bg.png');">
+            <div class="container">
                 <h2>We design tools to unveil your superpowers</h2>
                 <div class="row">
                     <div class="col">
@@ -104,8 +104,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn">
-                    <a href="#" class="sing-up-now">Sign up Now</a>
+                <div class="btn-holder">
+                    <a href="#" class="btn xl">Sign up Now</a>
                 </div>
             </div>         
         </section>
@@ -113,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                    <div class="image-1">
+                    <div class="img">
                          <img src="./img/Image-1.svg" alt="image-1">
                      </div>
                     </div>
@@ -139,7 +139,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="image-1">
+                        <div class="img">
                             <img src="./img/Image-2.svg" alt="image-2">
                         </div>
                     </div> 
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="image-1">
+                        <div class="img">
                             <img src="./img/Image-3.svg" alt="Image-3">
                         </div>
                     </div>
@@ -200,7 +200,7 @@
             </div>
         </section>
         <hr>
-        <footer>
+        <footer class="reference">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -248,13 +248,13 @@
                         <h3>Knowing you're always on the best energy deal.</h3>    
                         <div class="form">
                             <form action="#">
-                                <label for="tel"></label>
                                 <input id="tel" name="tel" type="tel" autocorrect="off" autocomplete="tel" placeholder="Enter your phone Number"> 
+                                <div class="btn-holder">
+                                    <a href="#" class="btn xl" type="submit">Sign up Now</a>
+                                </div>   
                             </form>
                         </div>
-                        <div class="btn">
-                            <a href="#" class="sing-up-now" type="submit">Sign up Now</a>
-                        </div>    
+                        
                     </div>
                 </div>
             </div>
