--- a/HW-10/index.html
+++ b/HW-10/index.html
@@ -347,7 +347,7 @@
                         <span class="mail-title">We’re Always Happy to Help</span>
                         <a href="us@coffeestyle.io" class="mail-link">us@coffeestyle.io</a>
                     </div>
-                    <span class="copy">Powered by <a href="#">Webflow</a></span>
+                    <span class="copy copy-text">Powered by <a href="#">Webflow</a></span>
                 </div>
             </div>
         </div>
