--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col">
                     <div class="img-row card-1">
-                        <div class="rotate-img-row"></div>
+                        <div class="overlay-img"></div>
                         <!-- <img class="img-active" src="./src/img/card.png" onclick="bgChange()" alt="image description">-->
                     </div>
                     <h2>John Handson</h2>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col">
                     <div class="img-row card-2">
-                        <div class="rotate-img-row"></div>
+                        <div class="overlay-img"></div>
                     </div>
                     <h2>Alex Cutter</h2>
                     <div class="text-holder">
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col">
                     <div class="img-row card-3">
-                        <div class="rotate-img-row"></div>
+                        <div class="overlay-img"></div>
                     </div>
                     <h2>Elena Simpson</h2>
                     <div class="text-holder">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col">
                     <div class="img-row card-4">
-                        <div class="rotate-img-row"></div>
+                        <div class="overlay-img"></div>
                     </div>
                     <h2>Lily Allen</h2>
                     <div class="text-holder">
@@ -111,7 +111,7 @@
                     </a>
                 </li> -->
                 <li class="social-media-item">
-                    <div class="social-media-animated twitter">
+                    <div class="social-media-overlay twitter">
                         <a href="#" title="twitter">
                             <div class="sm-first">
                                 <div class="sm-second"></div>
@@ -120,7 +120,7 @@
                     </div>
                 </li>
                 <li class="social-media-item">
-                    <div class="social-media-animated facebook">
+                    <div class="social-media-overlay facebook">
                         <a href="#" title="facebook">
                             <div class="sm-first">
                                 <div class="sm-second"></div>
@@ -129,7 +129,7 @@
                     </div>
                 </li>
                 <li class="social-media-item">
-                    <div class="social-media-animated instagram">
+                    <div class="social-media-overlay instagram">
                         <a href="#" title="instagram">
                             <div class="sm-first">
                                 <div class="sm-second"></div>
@@ -138,7 +138,7 @@
                     </div>
                 </li>
                 <li class="social-media-item">
-                    <div class="social-media-animated linkedin">
+                    <div class="social-media-overlay linkedin">
                         <a href="#" title="linkedin">
                             <div class="sm-first">
                                 <div class="sm-second"></div>
@@ -147,7 +147,7 @@
                     </div>
                 </li>
                 <li class="social-media-item">
-                    <div class="social-media-animated telegram">
+                    <div class="social-media-overlay telegram">
                         <a href="#" title="telegram">
                             <div class="sm-first">
                                 <div class="sm-second"></div>
