--- a/HW-12/index.html
+++ b/HW-12/index.html
@@ -160,7 +160,7 @@
                         <div class="product-brand-name">
                             <h2><a href="#">Wrangler</a></h2>
                         </div>
-                        <span class="product-card-name">Футболкаа</span>
+                        <span class="product-card-name">Футболка</span>
                         <div class="text-holder">
                             <span class="product-price">749 грн</span>
                         </div>
