--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -13,13 +13,19 @@
         <div class="container">
             <div class="grid-container">
                 <div class="col-1">
-                    <div class="lang-dropdown">
+                    <form action="#" class="lang-form">
+                        <select class="lang-select">
+                            <option class="lang-item" value="english">ENG</option>
+                            <option class="lang-item" value="ukranian">UK</option>
+                        </select>
+                    </form>
+                    <!--<div class="lang-dropdown">
                         <div class="lang-selected">ENG</div>
                         <div class="lang-list">
                             <a href="#">ENG</a>
                             <a href="#">UA</a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-2">
                     <nav class="nav">
@@ -83,11 +89,14 @@
                 <div class="text-holder">
                     <p>React Native runs on <a href="#">React</a>, a popular open source library for building user interfaces with JavaScript. To make the most of React Native, it helps to understand React itself. This section can get you started or can serve as a refresher course.</p>
                     <p>We’re going to cover the core concepts behind React:</p>
-                    <p><strong>+ components.</strong> The rest of this introduction to React uses cats in its examples: friendly, approachable creatures that need names and a cafe to work in.</p>
-                    <p><strong>+ JSX.</strong> React and React Native use JSX, a syntax that lets you write elements inside JavaScript like so: <mark class="gray">&ltText&gt Hello, I am your cat! &lt/Text&gt.</mark></p>
-                    <p>The React docs have <a href="#">a comprehensive guide to JSX</a> you can refer to learn even more. Because JSX is JavaScript, you can use variables inside it. Here you are declaring a <mark class="gray">name</mark> for the cat, name, and embedding it with curly braces inside <mark class="gray">&ltText&gt</mark</p>
-                    <p><strong>+ props.</strong> Props is short for “properties”.</p>
-                    <p><strong>+ state.</strong> While you can think of props as arguments you use to configure how components render, state is like a component’s personal data storage. State is useful for handling data that changes over time or that comes from user interaction. State gives your components memory!</p>
+                    <ul class="list-holder">
+                        <li class="list-item"><strong>+ components.</strong> The rest of this introduction to React uses cats in its examples: friendly, approachable creatures that need names and a cafe to work in.</li>
+                        <li class="list-item"><strong>+ components.</strong> The rest of this introduction to React uses cats in its examples: friendly, approachable creatures that need names and a cafe to work in.</li>
+                        <li class="list-item"><strong>+ JSX.</strong> React and React Native use JSX, a syntax that lets you write elements inside JavaScript like so: <mark class="gray">&ltText&gt Hello, I am your cat! &lt/Text&gt.</mark></li>
+                        <li class="list-item">The React docs have <a href="#">a comprehensive guide to JSX</a> you can refer to learn even more. Because JSX is JavaScript, you can use variables inside it. Here you are declaring a <mark class="gray">name</mark> for the cat, name, and embedding it with curly braces inside <mark class="gray">&ltText&gt</mark></li>
+                        <li class="list-item"><strong>+ props.</strong> Props is short for “properties”.</li>
+                        <li class="list-item"><strong>+ state.</strong> While you can think of props as arguments you use to configure how components render, state is like a component’s personal data storage. State is useful for handling data that changes over time or that comes from user interaction. State gives your components memory!</li>
+                    </ul>  
                 </div>
             </div>
         </div>
